--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,11 @@ Encoding: UTF-8
 Package: unittest
 Type: Package
 Title: TAP-compliant unit testing.
-Version: 1.0-1
-Date: 2014-09-10
+Version: 1.1-0
+Date: 2014-12-13
 Authors@R:
-    c(person('Jamie','Lentin',email='jm@ravingmantis.com',role=c('aut')),
-      person('Anthony','Hennessey',email='ah@ravingmantis.com',role=c('aut','cre')))
+    c(person('Jamie','Lentin',email='jm@ravingmantis.com',role=c('aut','cre')),
+      person('Anthony','Hennessey',email='ah@ravingmantis.com',role=c('aut')))
 Description:
     Concise TAP (http://testanything.org/) compliant unit testing package. Authored tests can be run using CMD check with minimal implementation overhead.
 License: GPL (>= 3)
