--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,8 @@ Depends:
     R (>= 3.0.0)
 Imports:
 Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
 BugReports: https://github.com/ravingmantis/unittest/issues
 LazyData: yes
