--- a/.github/workflows/check-ucrt.yaml
+++ b/.github/workflows/check-ucrt.yaml
@@ -1,7 +1,7 @@
 # https://github.com/kalibera/pkg-check-test/blob/30dae1f45f0fdada5f10f81857c0c4dfa743f1ad/.github/workflows/check.yml
 on: [push, pull_request]
 
-name: R-CMD-Check
+name: R-CMD-Check-UCRT
 
 jobs:
   R-CMD-check:
@@ -23,4 +23,5 @@ jobs:
           # full ... additional libraries to build CRAN packages
           # none ... no toolchain is needed (no native code) 
           toolchain-type: full
+      - uses: r-lib/actions/setup-r-dependencies@v1
       - uses: kalibera/R-actions/pkg-check@master
