.github/check-ucrt: SSH session after failure

--- a/.github/workflows/check-ucrt.yaml
+++ b/.github/workflows/check-ucrt.yaml
@@ -25,3 +25,6 @@ jobs:
           toolchain-type: full
       - uses: r-lib/actions/setup-r-dependencies@v1
       - uses: kalibera/R-actions/pkg-check@master
+      - name: SSH session after a failure
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
