.github/gh-pages.yml: Make sure system requirements are installed

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,13 +16,18 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
 
-#      - name: System dependencies (curl for httr)
-#        run: sudo apt-get install curl libcurl4-openssl-dev
+      - name: Install system dependencies
+        run: |
+          Rscript -e 'install.packages("remotes")'
+          while read -r cmd
+          do
+            eval sudo $cmd
+          done < <(Rscript -e 'writeLines(remotes::system_requirements("ubuntu", "20.04", package = c("pkgdown", "devtools", "textshaping")))')
 
       - name: Install build-docs prerequisites
-        run: Rscript -e 'install.packages(c("pkgdown", "devtools"))'
+        run: Rscript -e 'install.packages(c("pkgdown", "devtools", "textshaping"))'
 
-      - name: Install Rgadget
+      - name: Install package
         run: devtools::install(dependencies = TRUE, upgrade = "always")
         shell: Rscript {0}
 
