--- a/pkgdown.yml
+++ b/pkgdown.yml
@@ -4,5 +4,6 @@ pkgdown_sha: ~
 articles:
   faq: faq.html
   getting_started: getting_started.html
-last_built: 2022-08-21T17:27Z
+  testing_packages: testing_packages.html
+last_built: 2022-08-22T08:49Z
 
