--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Encoding: UTF-8
 Package: unittest
 Type: Package
 Title: TAP-Compliant Unit Testing
-Version: 1.5-0-999
+Version: 1.5-1
 Date: 2022-09-07
 Authors@R:
     c(person('Jamie','Lentin',email='jm@ravingmantis.com',role=c('aut','cre')),
