--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,15 +2,15 @@ Encoding: UTF-8
 Package: unittest
 Type: Package
 Title: TAP-Compliant Unit Testing
-Version: 1.5-3-999
-Date: 2022-09-25
+Version: 1.6-0
+Date: 2023-05-04
 Authors@R:
     c(person('Jamie','Lentin',email='jm@ravingmantis.com',role=c('aut','cre')),
       person('Anthony','Hennessey',email='ah@ravingmantis.com',role=c('aut')))
 Description:
     Concise TAP <http://testanything.org/> compliant unit testing package. Authored tests can be run using CMD check with minimal implementation overhead.
 License: GPL (>= 3)
-Depends: R (>= 3.0.0)
+Depends: R (>= 3.6.0)
 Imports:
     methods
 Suggests: 
