--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Encoding: UTF-8
 Package: unittest
 Type: Package
 Title: TAP-Compliant Unit Testing
-Version: 1.6-0
+Version: 1.6-0-999
 Date: 2023-05-04
 Authors@R:
     c(person('Jamie','Lentin',email='jm@ravingmantis.com',role=c('aut','cre')),
