--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Title: TAP-Compliant Unit Testing
 Version: 1.6-0-999
 Date: 2023-05-04
 Authors@R:
-    c(person('Jamie','Lentin',email='jm@ravingmantis.com',role=c('aut','cre')),
+    c(person('Jamie','Lentin',email='lentinj@shuttlethread.com',role=c('aut','cre')),
       person('Anthony','Hennessey',email='ah@ravingmantis.com',role=c('aut')))
 Description:
     Concise TAP <http://testanything.org/> compliant unit testing package. Authored tests can be run using CMD check with minimal implementation overhead.
