--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Encoding: UTF-8
 Package: unittest
 Type: Package
 Title: TAP-Compliant Unit Testing
-Version: 1.6-0-999
-Date: 2023-05-04
+Version: 1.6-1
+Date: 2024-01-10
 Authors@R:
     c(person('Jamie','Lentin',email='lentinj@shuttlethread.com',role=c('aut','cre')),
       person('Anthony','Hennessey',email='anthony.hennessey@protonmail.com',role=c('aut')))
